syntax = "proto3";

package flag;

import "google/protobuf/empty.proto";

option go_package = "ctf.nusgreyhats.org/sgrpc/flag";

message FlagRequest {
  fixed64 last_condition = 1;
  string first_condition = 2;
  bytes second_condition = 3;
}

message FlagReply {
  string flag = 1;
}

message HelloReply {
  string message = 1;
}

service Flag {
  rpc GetFlag (FlagRequest) returns (FlagReply);
  rpc Hello (google.protobuf.Empty) returns (HelloReply);
}